.tmp/styles/main.css
html, body, #map-canvas {
        height: 100%;
        margin: 0px;
        padding: 0px
      }

.controls {
        margin-top: 20px;
        border: 1px solid transparent;
        border-radius: 2px 0 0 2px;
        box-sizing: border-box;
        -moz-box-sizing: border-box;
        height: 32px;
        outline: none;
        box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
      }

      #input {
        background-color: #fff;
        padding: 0 11px 0px 13px;
        width: 50%;
        font-family: Roboto;
        font-size: 15px;
        font-weight: 300;
        text-overflow: ellipsis;
      }

      #input:focus {
        border-color: #4d90fe;
        margin-left: -1px;
        padding-left: 14px;   Regular padding-left + 1. 
        width: 401px;
      }

body {
  padding-top: 60px;
}

/*.googft-info-window { background-color: yellow }*/

